<resources>
    <string name="app_name">My Garage</string>
    <string name="countDownTime">5:00</string>
    <string name="open_button">Open</string>
    <string name="close_button">Close</string>
    <string name="light_button">Lights</string>
    <string name="help_button">Help</string>
    <string name="go_to_garage">Go To Garage</string>
    <string name="myName">Christopher Holmelund Gadgaard</string>
    <string name="email">Email</string>
    <string name="license_plate_no">License Plate No</string>
    <string name="dateTime">22:00 AM - 23/11/2022</string>
    <string name="phoneNo">Phone Number</string>
    <string name="action_icon">action icon</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="garage_timer_fragment_label">Garage</string>
    <string name="garage_action_user_fragment_label">My History</string>
    <string name="garage_action_admin_fragment_label">Garage History</string>
    <string name="fragment_my_account_label">My Account</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="garage_logo">Garage Logo</string>
    <string name="update">Update</string>
    <string name="done">done</string>
    <string name="back">Back</string>
    <string name="change_password">Change Password</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="street_number">Street Number</string>
    <string name="light_timer">Light Timer</string>
    <string name="gate_timer">Gate Timer</string>
    <string name="locked_icon">locked icon</string>
    <string name="subject">Subject</string>
    <string name="travel_time_0">Travel Time: 0</string>
</resources>